# gonkascan

./: .gitignore  Makefile  README.md  config.env.template  docker-compose.yaml
backend/: pyproject.toml
backend/src/backend/: app.py  client.py  database.py  models.py  router.py  service.py
backend/src/gonka_protos/: __init__.py
backend/src/gonka_protos/inference/bls/: events_pb2.py  genesis_pb2.py  group_validation_pb2.py  params_pb2.py  query_pb2.py  threshold_signing_pb2.py  tx_pb2.py  types_pb2.py
backend/src/gonka_protos/inference/bookkeeper/: genesis_pb2.py  params_pb2.py  query_pb2.py  tx_pb2.py
backend/src/gonka_protos/inference/collateral/: collateral_balance_pb2.py  genesis_pb2.py  jailed_pb2.py  params_pb2.py  query_pb2.py  tx_pb2.py  unbonding_pb2.py
backend/src/gonka_protos/inference/genesistransfer/: genesis_pb2.py  params_pb2.py  query_pb2.py  tx_pb2.py
backend/src/gonka_protos/inference/inference/: activeparticipants_pb2.py  bridge_pb2.py  confirmation_poc_event_pb2.py  epoch_group_data_pb2.py  epoch_group_datav1_pb2.py  epoch_group_validations_pb2.py  epoch_pb2.py  epoch_performance_summary_pb2.py  excluded_participant_pb2.py  genesis_pb2.py  grace_epoch_params_pb2.py  hardware_node_pb2.py  inference_pb2.py  inference_timeout_pb2.py  inference_validation_details_pb2.py  liquidity_pool_pb2.py  mlnode_version_pb2.py  model_pb2.py  network_node_pb2.py  params_pb2.py  paramsv1_pb2.py  partial_upgrade_pb2.py  participant_pb2.py  poc_v2_pb2.py  poc_validation_snapshot_pb2.py  pocbatch_pb2.py  (+15 more)
backend/src/tests/: test_confirmation_poc.py
(+277 files in other folders)
