[project]
name = "gonkascan"
version = "0.1.0"
description = "Gonkascan - Gonka Chain Block Explorer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.27.0",
    "h2>=4.1.0",
    "aiosqlite>=0.19.0",
    "bech32>=1.2.0",
    "cosmospy-protobuf>=0.4.0",
    "geoip2>=5.2.0",
    "ipaddress>=1.0.23",
    "googleapis-common-protos>=1.63.0"
]

[project.urls]
Repository = "https://github.com/6block/gonkascan"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

